--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="algoritmo.js"></script>
+    <title>Metrónomo Nerdsong</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,5 +22,6 @@
     <button class="botonTap" onclick="funcionTap()">tap</button>
     </div>
     </div>
+    <script src="algoritmo.js"></script>
 </body>
 </html>
