--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><img class = "imagenMetronomo" src="/Imagenes/imagenMetronomo.png"> Metrónomo </header>
+    <header><img class = "imagenMetronomos" src="./imagenes/imagenMetronomo.png"> Metrónomo </header>
     <div class="base">
     <div class="contenedorInput">
-    <input id = "beats_por_minuto" type="number" onchange="definirBPM()">
+    <input id = "beats_por_minuto" type="number" onchange="definirBPM()" placeholder="bpm." min= 20><br>
+    <button class="aumentar_disminuir_boton" onclick="disminuirBPM()">-</button>
+    <input id="slider_bpm" type = range max = "260" min = "20" onchange="asignacionBeatsPorMinutoSlide()"></input>
+    <button class="aumentar_disminuir_boton" onclick="aumentarBPM()">+</button>
     </div>
     <div class = "botonera">
     <button onclick="iniciarMetronomo()">iniciar</button>
