Realicé nuevos cambios en los estilos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="contenedorInput">
     <input id = "beats_por_minuto" type="number" onchange="definirBPM()" placeholder="bpm." min= 20><br>
     <button class="aumentar_disminuir_boton" onclick="disminuirBPM()">-</button>
-    <input id="slider_bpm" type = range max = "260" min = "20" onchange="asignacionBeatsPorMinutoSlide()"></input>
+    <input id="slider_bpm" type = range max = "260" min = "20" oninput="asignacionBeatsPorMinutoSlide()"></input>
     <button class="aumentar_disminuir_boton" onclick="aumentarBPM()">+</button>
     </div>
     <div class = "botonera">
