empecé una variante del metronomo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button class="aumentar_disminuir_boton" onclick="aumentarBPM()">+</button>
     </div>
     <div class = "botonera">
-    <button onclick="iniciarMetronomo()">iniciar</button>
+    <button class= "botonIniciar" onclick="iniciarMetronomo()">iniciar</button>
     <button class="botonDetener" onclick="detenerMetronomo()">detener</button>
     <button class="botonTap" onclick="funcionTap()">tap</button>
     </div>
